After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 648857 - File Operations diaolg displays operations twice
File Operations diaolg displays operations twice
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: File and Folder Operations
3.0.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
: 649039 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2011-04-28 09:16 UTC by padfoot
Modified: 2011-04-30 21:32 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description padfoot 2011-04-28 09:16:08 UTC
Refer Arch Linux Fly Spray - https://bugs.archlinux.org/task/23969#comment75821

Description: When doing a copy/paste operation, the first activates the file operations dialog as expected. When a second or futher operations are launched, the second and subsequent operations are displayed twice in the dialog.

Additional info:
nautilus 3.0.1-1 from testing repository
see screenshot of duplication [url]home.exetel.com.au/padfoot/images/fileops.png[/url]

Steps to reproduce:
Open nautilus, start a large file copy operation. While this operation is in progress, start another file copy operation.
Comment 1 Cosimo Cecchi 2011-04-28 18:27:43 UTC
Thanks for the bug report, this is now fixed in master (will backport to another 3.0.x release soon).
Comment 2 Cosimo Cecchi 2011-04-30 21:32:31 UTC
*** Bug 649039 has been marked as a duplicate of this bug. ***