progress-ui-handler: don't add progress infos to the window twice

We were adding them twice in case there was already one operation
running.

https://bugzilla.gnome.org/show_bug.cgi?id=648857